recreated reviews to testimonials and completely redesigned them

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -156,31 +156,19 @@
 	<section class="container-fluid d-flex justify-content-center bg-dark text-white px-5" id="reviews">
 		<div class="row">
 			<div class="col-md-3 pb-3">
-				<h2 class="text-center fs-1 fw-bold">Reviews</h2>
+				<h2 class="text-center fs-1 fw-bold">Testimonials</h2>
 			</div>
 		</div>
 	</section>
 	<section class="container-fluid bg-dark">
-		<div class="row px-5">
-			<div class="col-md-6">
-				<div class="card">
-					<div class="card-body">
-						<blockquote class="blockquote mb-0 bg-dark text-white">
-							<p>"Im Goku, a Saiyan who was raised on Earth...or so they tell me."</p>
-							<footer class="blockquote-footer text-secondary">Goku</footer>
-						</blockquote>
-					</div>
-				</div>
+		<div class="row px-5 pb-5 justify-content-evenly">
+			<div class="col-md-5 p-5 mb-3 bg-info border border-light border-3 rounded-circle">
+					<p class="mb-0 bg-info text-white text-center fs-3">"Im Goku, a Saiyan who was raised on Earth...or so they tell me."</p>
+					<footer class="blockquote-footer text-white text-start fs-4">Goku</footer>
 			</div>
-			<div class="col-md-6">
-				<div class="card">
-					<div class="card-body">
-						<blockquote class="blockquote mb-0 bg-dark text-white">
-							<p>"And, last but not least... KAAAAAMEEEEEHAAAAMEEEEEEHAAAAAAA!!!!!"</p>
-							<footer class="blockquote-footer text-secondary">Goku</footer>
-						</blockquote>
-					</div>
-				</div>
+			<div class="col-md-5 p-5 bg-info border border-light border-3 rounded-circle">
+				<p class="mb-0 bg-info text-white text-center fs-3">"Im Goku, a Saiyan who was raised on Earth...or so they tell me."</p>
+				<footer class="blockquote-footer text-white text-start fs-4">Goku</footer>
 			</div>
 		</div>
 	</section>
