--- a/public_html/index.html
+++ b/public_html/index.html
@@ -84,7 +84,7 @@
 	<section class="container-fluid d-flex justify-content-center bg-dark text-white pb-3" id="services">
 		<div class="row">
 			<div class="col-md-4">
-				<h2 class="text-center fs-1 text-nowrap fw-bold">Select A Service</h2>
+				<h2 class="text-center fs-1 text-nowrap fw-bold">Services Available</h2>
 			</div>
 		</div>
 	</section>
@@ -162,13 +162,13 @@
 	</section>
 	<section class="container-fluid bg-dark">
 		<div class="row px-5 pb-5 justify-content-evenly">
-			<div class="col-md-5 p-5 mb-3 bg-info border border-light border-3 rounded-circle">
-					<p class="mb-0 bg-info text-white text-center fs-3">"Im Goku, a Saiyan who was raised on Earth...or so they tell me."</p>
-					<footer class="blockquote-footer text-white text-start fs-4">Goku</footer>
+			<div class="col-md-5 p-5 mb-3 bg-info border border-light border-3 rounded-pill">
+					<p class="mb-0 bg-info text-white text-center fs-3 rounded-circle">"Im Goku, a Saiyan who was raised on Earth...or so they tell me."</p>
+					<footer class="blockquote-footer text-white text-start fs-4 pt-3">Goku</footer>
 			</div>
-			<div class="col-md-5 p-5 bg-info border border-light border-3 rounded-circle">
-				<p class="mb-0 bg-info text-white text-center fs-3">"Im Goku, a Saiyan who was raised on Earth...or so they tell me."</p>
-				<footer class="blockquote-footer text-white text-start fs-4">Goku</footer>
+			<div class="col-md-5 p-5 bg-info border border-light border-3 rounded-pill">
+				<p class="mb-0 bg-info text-white text-center fs-3 rounded-circle">"Im Goku, a Saiyan who was raised on Earth...or so they tell me."</p>
+				<footer class="blockquote-footer text-white text-start fs-4 pt-3">Goku</footer>
 			</div>
 		</div>
 	</section>
