--- a/public_html/index.html
+++ b/public_html/index.html
@@ -174,10 +174,16 @@
 	</section>
 </main>
 
+<section class="container-fluid d-flex justify-content-center bg-dark text-white px-5" id="contactMe">
+	<div class="row">
+		<div class="col-md-3 pb-3">
+			<h2 class="text-center fs-1 fw-bold text-nowrap">Contact Form</h2>
+		</div>
+	</div>
+</section>
 
-<!--start of the form-->
-<h2 id="contactMe">Contact Form</h2>
-<form action="http://localhost:4200/apis/" id="contact" method="post" novalidate>
+<section class="container-fluid bg-dark text-white">
+<form action="http://localhost:4200/apis/" id="contact" method="post" novalidate class="">
 	<div class="form-group">
 		<label for="name">Name</label>
 		<div class="input-group">
@@ -216,12 +222,12 @@
 					  rows="5"></textarea>
 		</div>
 	</div>
-	<!-- Make sure to add site key provided by google recaptcha -->
 	<div class="g-recaptcha" data-sitekey="6LeZqtgaAAAAAONroZKRa6n8DIa4QbLVM-sW6XZ4"></div>
 	<button class="btn btn-info" type="submit">Submit</button>
 	<button class="btn btn-default" type="reset">Reset</button>
 </form>
-<!--end of the form-->
+</section>
+
 
 <script
 		src="https://code.jquery.com/jquery-3.5.1.min.js"
