changed gif to a video

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,8 +12,8 @@
 
 	<title>Personal Website Project</title>
 </head>
+
 <body>
-<!--<header>-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top py-0" id="topOfPage">
 	<div class="container-fluid">
 		<a class="navbar-brand fs-1 fw-bold text-white text-wrap" href="#topOfPage">
@@ -42,12 +42,12 @@
 		</div>
 	</div>
 </div>
-<!--</header>-->
+
 
 <main>
 	<section class="container-fluid px-0">
-		<!--				<div class="backgroundIMG backgroundIMGSize" id="gifContainer" onmouseenter="activateGIF()"></div>-->
-		<img class="img-fluid backgroundIMGSize" src="imgs/front-page-gif-2.gif" alt="galaxy">
+<!--		<img class="img-fluid backgroundIMGSize" src="imgs/front-page-gif-2.gif" alt="galaxy">-->
+		<video src="imgs/pwp-background-video.mp4" autoplay muted loop class="backgroundIMGSize"></video>
 	</section>
 
 	<section class="container pb-4 pt-3 px-2 bg-dark text-white" id="aboutMe">
