--- a/public_html/index.html
+++ b/public_html/index.html
@@ -45,10 +45,9 @@
 
 
 <main>
-	<section class="container-fluid px-0">
-<!--		<img class="img-fluid backgroundIMGSize" src="imgs/front-page-gif-2.gif" alt="galaxy">-->
-		<video src="imgs/pwp-background-big-23fps.mp4" autoplay muted loop class="backgroundIMGSize"></video>
-	</section>
+<!--	<section class="container-fluid px-0">-->
+		<video src="imgs/pwp-background-video-2.mp4" autoplay muted loop class="backgroundIMGSize"></video>
+<!--	</section>-->
 
 	<section class="container pb-4 pt-3 px-2 bg-dark text-white" id="aboutMe">
 		<div class="row pb-5 justify-content-between">
