got the background video to look pretty good

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -43,18 +43,20 @@
 	</div>
 </div>
 
-
 <main>
-<!--	<section class="container-fluid px-0">-->
-		<video src="imgs/pwp-background-video-2.mp4" autoplay muted loop class="backgroundIMGSize"></video>
-<!--	</section>-->
+	<section class="container">
+		<div class="row">
+			<video src="imgs/pwp-background-video-2.mp4" autoplay muted loop class="backgroundIMGSize"></video>
+		</div>
+	</section>
 
 	<section class="container pb-4 pt-3 px-2 bg-dark text-white" id="aboutMe">
 		<div class="row pb-5 justify-content-between">
 			<div class="col-md-8">
 				<h1 class="fs-1 fw-bold">About Saiyan Web Development</h1>
-				<p class="fs-4 custom-text-about-me">Welcome to the most <span class="highlight-text">affordable</span> and <span
-						class="highlight-text">reliable</span> service for all of your Web Development needs. We can
+				<p class="fs-4 custom-text-about-me">Welcome to the most <span class="highlight-text">affordable</span>
+					and <span
+							class="highlight-text">reliable</span> service for all of your Web Development needs. We can
 					build your own <span class="highlight-text">personal</span> website from the ground up. Your new
 					website will look and work how you want
 					it to. This is done by having <span class="highlight-text">one-on-one</span> meetings to ensure the
