--- a/public_html/index.html
+++ b/public_html/index.html
@@ -182,7 +182,7 @@
 
 <!--contact form-->
 <section class="container bg-dark text-white px-2">
-	<form action="http://localhost:4200/apis/" id="contact" method="post" novalidate class="">
+	<form action="./apis/" id="contact" method="post" novalidate class="">
 		<div class="form-group">
 			<label for="name">Name</label>
 			<div class="input-group">
