--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,10 +10,11 @@
 		  integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 	<link href="style.css" rel="stylesheet">
 
-	<title>Personal Website Project</title>
+	<title>Home Page</title>
 </head>
 
 <body>
+<!--navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top py-0" id="topOfPage">
 	<div class="container-fluid">
 		<a class="navbar-brand fs-1 fw-bold text-white text-wrap" href="#topOfPage">
@@ -50,6 +51,7 @@
 		</div>
 	</section>
 
+<!--About me-->
 	<section class="container pb-4 pt-3 px-2 bg-dark text-white" id="aboutMe">
 		<div class="row pb-5 justify-content-between">
 			<div class="col-md-8">
@@ -77,6 +79,7 @@
 		</div>
 	</section>
 
+<!--Services Available-->
 	<section class="container d-flex justify-content-center bg-dark text-white pb-3 px-2" id="services">
 		<div class="row">
 			<div class="col-md-4">
@@ -88,9 +91,6 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="card border border-light border-3 bg-dark text-white">
-					<!--					<img src="./imgs/super-saiyan-2.gif"-->
-					<!--						 class="card-img-top img-fluid rounded-circle cardImgSize border border-warning border border-2"-->
-					<!--						 alt="...">-->
 					<div class="card-body bg-info text-white">
 						<h5 class="card-title bg-info text-white fs-3 text-uppercase">Personal Website</h5>
 						<p class="card-text bg-info text-white">You will get a one page website that will be personally
@@ -109,9 +109,6 @@
 			</div>
 			<div class="col-md-4">
 				<div class="card border border-light border-3 bg-dark text-white">
-					<!--					<img src="./imgs/super-saiyan-god.gif"-->
-					<!--						 class="card-img-top img-fluid rounded-circle cardImgSize border border-primary border border-2"-->
-					<!--						 alt="...">-->
 					<div class="card-body bg-info text-white">
 						<h5 class="card-title bg-info text-white fs-3 text-uppercase">E-Commerce Online Web Shop</h5>
 						<p class="card-text bg-info text-white">You will get an online shop where customers can buy your
@@ -129,9 +126,6 @@
 			</div>
 			<div class="col-md-4">
 				<div class="card border border-light border-3 bg-dark text-white">
-					<!--					<img src="./imgs/ultra-instinct.gif"-->
-					<!--						 class="card-img-top img-fluid rounded-circle cardImgSize border border-info border border-2"-->
-					<!--						 alt="...">-->
 					<div class="card-body bg-info text-white">
 						<h5 class="card-title bg-info text-white fs-3 text-uppercase">Creative Unique Website</h5>
 						<p class="card-text bg-info text-white">You will get a Website that has many unique features
@@ -149,6 +143,7 @@
 		</div>
 	</section>
 
+<!--Testimonials-->
 	<section class="container d-flex justify-content-center bg-dark text-white px-2" id="reviews">
 		<div class="row">
 			<div class="col-md-3 pb-3">
@@ -159,9 +154,8 @@
 	<section class="container bg-dark px-2">
 		<div class="row px-5 pb-5 justify-content-between">
 			<div class="col-md-5 p-5 mb-3 bg-info border border-light border-3 rounded-pill">
-				<p class="mb-0 bg-info text-white text-center fs-3 rounded-circle">"Im Goku, a Saiyan who was raised on
-					Earth...or so they tell me."</p>
-				<footer class="blockquote-footer text-white text-start fs-4 pt-3">Goku</footer>
+				<p class="mb-0 bg-info text-white text-center fs-3 rounded-circle">"Wow you made that?!?!"</p>
+				<footer class="blockquote-footer text-white text-start fs-4 pt-3">Beanz</footer>
 			</div>
 			<div class="col-md-5 p-5 mb-3 bg-info border border-light border-3 rounded-pill">
 				<p class="mb-0 bg-info text-white text-center fs-3 rounded-circle">"Im Goku, a Saiyan who was raised on
@@ -186,36 +180,24 @@
 		<div class="form-group">
 			<label for="name">Name</label>
 			<div class="input-group">
-				<!--			<div class="input-group-prepend">-->
-				<!--				<span class="input-group-text"><i class="fa fa-user"></i></span>-->
-				<!--			</div>-->
 				<input class="form-control" id="name" name="name" placeholder="Your Name" type="text">
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="email">Email</label>
 			<div class="input-group">
-				<!--			<div class="input-group-prepend">-->
-				<!--				<span class="input-group-text"><i class="fa fa-envelope"></i></span>-->
-				<!--			</div>-->
 				<input class="form-control" id="email" name="email" placeholder="Your Email" type="email">
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="subject">Subject</label>
 			<div class="input-group">
-				<!--			<div class="input-group-prepend">-->
-				<!--				<span class="input-group-text"><i class="fa fa-pencil"></i></span>-->
-				<!--			</div>-->
 				<input class="form-control" id="subject" name="subject" placeholder="Subject" type="text">
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="message">Message</label>
 			<div class="input-group">
-				<!--			<div class="input-group-prepend">-->
-				<!--				<span class="input-group-text"><i class="fa fa-comment"></i></span>-->
-				<!--			</div>-->
 				<textarea class="form-control" id="message" maxlength="2000" name="message"
 						  placeholder="Your Message (2000 characters max)" required
 						  rows="5"></textarea>
