fixed video to be responcive on mobile

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,7 +12,6 @@
 
 	<title>Home Page</title>
 </head>
-
 <body>
 <!--navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top py-0" id="topOfPage">
@@ -44,10 +43,11 @@
 	</div>
 </div>
 
+<!--Video-->
 <main>
-	<section class="container">
-		<div class="row">
-			<video src="imgs/pwp-background-video-2.mp4" autoplay muted loop class="backgroundIMGSize"></video>
+	<section class="container-fluid">
+		<div class="row my-4">
+			<video src="imgs/pwp-background-video.mp4" autoplay muted loop class="backgroundIMGSize"></video>
 		</div>
 	</section>
 
