--- a/public_html/index.html
+++ b/public_html/index.html
@@ -53,7 +53,7 @@
 
 <!--About me-->
 	<section class="container pb-4 pt-3 px-2 bg-dark text-white" id="aboutMe">
-		<div class="row pb-5 justify-content-between">
+		<div class="row px-5 pb-5 justify-content-between">
 			<div class="col-md-8">
 				<h1 class="fs-1 fw-bold">About Saiyan Web Development</h1>
 				<p class="fs-4 custom-text-about-me">Welcome to the most <span class="highlight-text">affordable</span>
@@ -80,7 +80,7 @@
 	</section>
 
 <!--Services Available-->
-	<section class="container d-flex justify-content-center bg-dark text-white pb-3 px-2" id="services">
+	<section class="container d-flex justify-content-center bg-dark text-white pb-2 px-2" id="services">
 		<div class="row">
 			<div class="col-md-4">
 				<h2 class="text-center fs-1 text-nowrap fw-bold">Services Available</h2>
@@ -88,8 +88,8 @@
 		</div>
 	</section>
 	<section class="container bg-dark text-white fs-4 pb-5 px-2">
-		<div class="row">
-			<div class="col-md-4">
+		<div class="row px-5">
+			<div class="col-md-4 my-3">
 				<div class="card border border-light border-3 bg-dark text-white">
 					<div class="card-body bg-info text-white">
 						<h5 class="card-title bg-info text-white fs-3 text-uppercase">Personal Website</h5>
@@ -107,7 +107,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 my-3">
 				<div class="card border border-light border-3 bg-dark text-white">
 					<div class="card-body bg-info text-white">
 						<h5 class="card-title bg-info text-white fs-3 text-uppercase">E-Commerce Online Web Shop</h5>
@@ -124,7 +124,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 my-3">
 				<div class="card border border-light border-3 bg-dark text-white">
 					<div class="card-body bg-info text-white">
 						<h5 class="card-title bg-info text-white fs-3 text-uppercase">Creative Unique Website</h5>
@@ -144,20 +144,20 @@
 	</section>
 
 <!--Testimonials-->
-	<section class="container d-flex justify-content-center bg-dark text-white px-2" id="reviews">
+	<section class="container d-flex justify-content-center bg-dark text-white px-2 pb-2" id="reviews">
 		<div class="row">
-			<div class="col-md-3 pb-3">
+			<div class="col-md-3">
 				<h2 class="text-center fs-1 fw-bold">Testimonials</h2>
 			</div>
 		</div>
 	</section>
 	<section class="container bg-dark px-2">
 		<div class="row px-5 pb-5 justify-content-between">
-			<div class="col-md-5 p-5 mb-3 bg-info border border-light border-3 rounded-pill">
+			<div class="col-md-5 p-5 my-3 bg-info border border-light border-3 rounded-pill">
 				<p class="mb-0 bg-info text-white text-center fs-3 rounded-circle">"Wow you made that?!?!"</p>
 				<footer class="blockquote-footer text-white text-start fs-4 pt-3">Beanz</footer>
 			</div>
-			<div class="col-md-5 p-5 mb-3 bg-info border border-light border-3 rounded-pill">
+			<div class="col-md-5 p-5 my-3 bg-info border border-light border-3 rounded-pill">
 				<p class="mb-0 bg-info text-white text-center fs-3 rounded-circle">"Im Goku, a Saiyan who was raised on
 					Earth...or so they tell me."</p>
 				<footer class="blockquote-footer text-white text-start fs-4 pt-3">Goku</footer>
@@ -166,9 +166,9 @@
 	</section>
 </main>
 
-<section class="container d-flex justify-content-center bg-dark text-white px-2" id="contactMe">
+<section class="container d-flex justify-content-center bg-dark text-white px-2 pb-2" id="contactMe">
 	<div class="row">
-		<div class="col-md-3 pb-3">
+		<div class="col-md-3 ">
 			<h2 class="text-center fs-1 fw-bold text-nowrap">Contact Form</h2>
 		</div>
 	</div>
