--- a/public_html/index.html
+++ b/public_html/index.html
@@ -51,22 +51,23 @@
 		</div>
 	</section>
 
-<!--About me-->
+	<!--About me-->
 	<section class="container pb-4 pt-3 px-2 bg-dark text-white" id="aboutMe">
 		<div class="row px-5 pb-5 justify-content-between">
 			<div class="col-md-8">
 				<h1 class="fs-1 fw-bold">About Saiyan Web Development</h1>
 				<p class="fs-4 custom-text-about-me">Welcome to the most <span class="highlight-text">affordable</span>
-					and <span
-							class="highlight-text">reliable</span> service for all of your Web Development needs. We can
-					build your own <span class="highlight-text">personal</span> website from the ground up. Your new
-					website will look and work how you want
-					it to. This is done by having <span class="highlight-text">one-on-one</span> meetings to ensure the
-					<span class="highlight-text">design</span> and <span class="highlight-text">functionality</span> is
-					what you
-					want. You are here because you want to take your online presence to the next level and further
-					achieve your <span class="highlight-text">goals</span>. You can <span
-							class="highlight-text">trust</span> that we can make your new website a reality!</p>
+					and <span class="highlight-text">reliable</span> website development service! With my service you
+					will get
+					your own <span class="highlight-text">website</span> built from the ground up. I <span
+							class="highlight-text">guarantee</span> your new
+					website will look and work how you want. This is done by having virtual <span
+							class="highlight-text">one-on-one</span>
+					meetings to ensure the
+					<span class="highlight-text">design</span> and <span class="highlight-text">functionality</span>
+					fits your needs and goals. You can <span class="highlight-text">trust</span> that I can make your
+					new website a reality!
+				</p>
 			</div>
 			<div class="col-md-1 d-flex align-items-center">
 				<a href="https://github.com/Brody-code-designer" title="GitHub" class="removeBlue">
@@ -79,7 +80,7 @@
 		</div>
 	</section>
 
-<!--Services Available-->
+	<!--Services Available-->
 	<section class="container d-flex justify-content-center bg-dark text-white pb-2 px-2" id="services">
 		<div class="row">
 			<div class="col-md-4">
@@ -93,57 +94,48 @@
 				<div class="card border border-light border-3 bg-dark text-white">
 					<div class="card-body bg-info text-white">
 						<h5 class="card-title bg-info text-white fs-3 text-uppercase">Personal Website</h5>
-						<p class="card-text bg-info text-white">You will get a one page website that will be personally
-							customized for you.</p>
+						<p class="card-text bg-info text-white">You will get a one-page personally designed website.</p>
 					</div>
 					<ul class="list-group list-group-flush bg-secondary text-white">
-						<li class="list-group-item bg-secondary text-white">A Website for people to learn more about
-							you
-						</li>
-						<li class="list-group-item bg-secondary text-white">Single Page</li>
-						<li class="list-group-item bg-secondary text-white">Responsive to look professional on Mobile
-							and Desktop
-						</li>
+						<li class="list-group-item bg-secondary text-white">Single Webpage</li>
+						<li class="list-group-item bg-secondary text-white">Unique Design Features</li>
+						<li class="list-group-item bg-secondary text-white">Responsive on Mobile and Desktop</li>
 					</ul>
 				</div>
 			</div>
 			<div class="col-md-4 my-3">
 				<div class="card border border-light border-3 bg-dark text-white">
 					<div class="card-body bg-info text-white">
-						<h5 class="card-title bg-info text-white fs-3 text-uppercase">E-Commerce Online Web Shop</h5>
-						<p class="card-text bg-info text-white">You will get an online shop where customers can buy your
-							products.</p>
+						<h5 class="card-title bg-info text-white fs-3 text-uppercase">Creative Website</h5>
+						<p class="card-text bg-info text-white">You will get a multi-page uniquely designed website.</p>
 					</div>
 					<ul class="list-group list-group-flush bg-secondary text-white">
-						<li class="list-group-item bg-secondary text-white">A Website for you to sell your products</li>
-						<li class="list-group-item bg-secondary text-white">Created with Wordpress</li>
-						<li class="list-group-item bg-secondary text-white">Products, Add to Cart, Checkout</li>
-						<li class="list-group-item bg-secondary text-white">Optional Service: Continued wordpress
-							Maintenance
-						</li>
+						<li class="list-group-item bg-secondary text-white">Multiple Webpages</li>
+						<li class="list-group-item bg-secondary text-white">Custom Design</li>
+						<li class="list-group-item bg-secondary text-white">Responsive on Mobile and Desktop</li>
+						<li class="list-group-item bg-secondary text-white">Cutting Edge</li>
 					</ul>
 				</div>
 			</div>
 			<div class="col-md-4 my-3">
 				<div class="card border border-light border-3 bg-dark text-white">
 					<div class="card-body bg-info text-white">
-						<h5 class="card-title bg-info text-white fs-3 text-uppercase">Creative Unique Website</h5>
-						<p class="card-text bg-info text-white">You will get a Website that has many unique features
-							that are cutting edge. </p>
+						<h5 class="card-title bg-info text-white fs-3 text-uppercase">E-Commerce Website</h5>
+						<p class="card-text bg-info text-white">You will get a multi-page online shop. </p>
 					</div>
 					<ul class="list-group list-group-flush bg-secondary text-white">
-						<li class="list-group-item bg-secondary text-white">Thinking outside the Box</li>
-						<li class="list-group-item bg-secondary text-white">Custom design created by you and me</li>
-						<li class="list-group-item bg-secondary text-white">Complex web development that is cutting
-							edge
-						</li>
+						<li class="list-group-item bg-secondary text-white">Multiple Webpages</li>
+						<li class="list-group-item bg-secondary text-white">Custom Design</li>
+						<li class="list-group-item bg-secondary text-white">Responsive on Mobile and Desktop</li>
+						<li class="list-group-item bg-secondary text-white">Online Shopping Experience</li>
+						<li class="list-group-item bg-secondary text-white">Secure Payment Checkout</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 	</section>
 
-<!--Testimonials-->
+	<!--Testimonials-->
 	<section class="container d-flex justify-content-center bg-dark text-white px-2 pb-2" id="reviews">
 		<div class="row">
 			<div class="col-md-3">
