changed color scheme

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -26,11 +26,11 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse changeFlexGrow" id="navbarSupportedContent">
-			<div class="navbar-nav ml-auto mb-2 mb-md-0">
-				<a class="nav-link active" aria-current="page" href="#aboutMe">About Me</a>
-				<a class="nav-link" href="#services">Service Plans</a>
-				<a class="nav-link" href="#reviews">Client Reviews</a>
-				<a class="nav-link" href="#contactMe">Contact Me</a>
+			<div class="navbar-nav ml-auto mb-2 mb-md-0 fs-4">
+				<a class="nav-link active text-white" aria-current="page" href="#aboutMe">About</a>
+				<a class="nav-link  text-white" href="#services">Services</a>
+				<a class="nav-link  text-white" href="#reviews">Testimonials</a>
+				<a class="nav-link" href="#contactMe"><span class="highlight-text-blue">Contact Me</span></a>
 			</div>
 		</div>
 	</div>
@@ -38,7 +38,7 @@
 <div class="container-fluid bg-dark">
 	<div class="row">
 		<div class="col-md-7">
-			<p class="fst-italic fs-3 ms-md-5 mb-0 text-white text-lg-center">Website Development Services</p>
+			<p class="fst-italic fs-3 ms-md-5 mb-0 text-lg-center highlight-text-blue">Website Development Services</p>
 		</div>
 	</div>
 </div>
@@ -56,16 +56,16 @@
 		<div class="row px-5 pb-5 justify-content-between">
 			<div class="col-md-8">
 				<h1 class="fs-1 fw-bold">About Saiyan Web Development</h1>
-				<p class="fs-4 custom-text-about-me">Welcome to the most <span class="highlight-text">affordable</span>
-					and <span class="highlight-text">reliable</span> website development service! With my service you
+				<p class="fs-4 custom-text-about-me">Welcome to the most <span class="highlight-text-blue">affordable</span>
+					and <span class="highlight-text-blue">reliable</span> website development service! With my service you
 					will get
-					your own <span class="highlight-text">website</span> built from the ground up. I <span
-							class="highlight-text">guarantee</span> your new
+					your own <span class="highlight-text-blue">website</span> built from the ground up. I <span
+							class="highlight-text-blue">guarantee</span> your new
 					website will look and work how you want. This is done by having virtual <span
-							class="highlight-text">one-on-one</span>
+							class="highlight-text-blue">one-on-one</span>
 					meetings to ensure the
-					<span class="highlight-text">design</span> and <span class="highlight-text">functionality</span>
-					fits your needs and goals. You can <span class="highlight-text">trust</span> that I can make your
+					<span class="highlight-text-blue">design</span> and <span class="highlight-text-blue">functionality</span>
+					fits your needs and goals. You can <span class="highlight-text-blue">trust</span> that I can make your
 					new website a reality!
 				</p>
 			</div>
@@ -92,9 +92,9 @@
 		<div class="row px-5">
 			<div class="col-md-4 my-3">
 				<div class="card border border-light border-3 bg-dark text-white">
-					<div class="card-body bg-info text-white">
-						<h5 class="card-title bg-info text-white fs-3 text-uppercase">Personal Website</h5>
-						<p class="card-text bg-info text-white">You will get a one-page personally designed website.</p>
+					<div class="card-body bg-primary text-white">
+						<h5 class="card-title bg-primary text-white fs-3 text-uppercase">Personal Website</h5>
+						<p class="card-text bg-primary text-white">You will get a one-page personally designed website.</p>
 					</div>
 					<ul class="list-group list-group-flush bg-secondary text-white">
 						<li class="list-group-item bg-secondary text-white">Single Webpage</li>
@@ -145,8 +145,8 @@
 	</section>
 	<section class="container bg-dark px-2">
 		<div class="row px-5 pb-5 justify-content-between">
-			<div class="col-md-5 p-5 my-3 bg-info border border-light border-3 rounded-pill">
-				<p class="mb-0 bg-info text-white text-center fs-3 rounded-circle">"Wow you made that?!?!"</p>
+			<div class="col-md-5 p-5 my-3 backgroundSecondaryColor border border-light border-3 rounded-pill">
+				<p class="mb-0 backgroundSecondaryColor text-white text-center fs-3 rounded-circle">"Wow you made that?!?!"</p>
 				<footer class="blockquote-footer text-white text-start fs-4 pt-3">Beanz</footer>
 			</div>
 			<div class="col-md-5 p-5 my-3 bg-info border border-light border-3 rounded-pill">
