--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,6 +8,7 @@
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
 		  integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.typekit.net/elt8fns.css">
 	<link href="style.css" rel="stylesheet">
 
 	<title>Home Page</title>
@@ -15,8 +16,8 @@
 <body>
 <!--navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top py-0" id="topOfPage">
-	<div class="container-fluid">
-		<a class="navbar-brand fs-1 fw-bold text-white text-wrap" href="#topOfPage">
+	<div class="container-fluid flex-nowrap">
+		<a class="navbar-brand text-white fs-1 text-wrap saiyanFont" href="#topOfPage">
 			<img src="imgs/dragon-ball-logo.png" alt="logo" width="50" height="50"
 				 class="d-inline-block">
 			Saiyan Web Development</a>
@@ -55,7 +56,7 @@
 	<section class="container pb-4 pt-3 px-2 bg-dark text-white" id="aboutMe">
 		<div class="row px-5 pb-5 justify-content-between">
 			<div class="col-md-8">
-				<h1 class="fs-1 fw-bold">About Saiyan Web Development</h1>
+				<h1 class="fs-1 uppercutFont">About Saiyan Web Development</h1>
 				<p class="fs-4 custom-text-about-me">Welcome to the most <span class="highlight-text-blue">affordable</span>
 					and <span class="highlight-text-blue">reliable</span> website development service! With my service you
 					will get
@@ -69,7 +70,7 @@
 					new website a reality!
 				</p>
 			</div>
-			<div class="col-md-1 d-flex align-items-center">
+			<div class="col-1 m-auto">
 				<a href="https://github.com/Brody-code-designer" title="GitHub" class="removeBlue">
 					<svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor"
 						 class="bi bi-github" viewBox="0 0 16 16">
@@ -84,7 +85,7 @@
 	<section class="container d-flex justify-content-center bg-dark text-white pb-2 px-2" id="services">
 		<div class="row">
 			<div class="col-md-4">
-				<h2 class="text-center fs-1 text-nowrap fw-bold">Services Available</h2>
+				<h2 class="text-center fs-1 text-nowrap uppercutFont">Services Available</h2>
 			</div>
 		</div>
 	</section>
@@ -92,9 +93,9 @@
 		<div class="row px-5">
 			<div class="col-md-4 my-3">
 				<div class="card border border-light border-3 bg-dark text-white">
-					<div class="card-body bg-primary text-white">
-						<h5 class="card-title bg-primary text-white fs-3 text-uppercase">Personal Website</h5>
-						<p class="card-text bg-primary text-white">You will get a one-page personally designed website.</p>
+					<div class="card-body backgroundSecondaryColor text-white">
+						<h5 class="card-title backgroundSecondaryColor text-white fs-3 text-uppercase">Personal Website</h5>
+						<p class="card-text backgroundSecondaryColor text-white">You will get a one-page personally designed website.</p>
 					</div>
 					<ul class="list-group list-group-flush bg-secondary text-white">
 						<li class="list-group-item bg-secondary text-white">Single Webpage</li>
@@ -105,9 +106,9 @@
 			</div>
 			<div class="col-md-4 my-3">
 				<div class="card border border-light border-3 bg-dark text-white">
-					<div class="card-body bg-info text-white">
-						<h5 class="card-title bg-info text-white fs-3 text-uppercase">Creative Website</h5>
-						<p class="card-text bg-info text-white">You will get a multi-page uniquely designed website.</p>
+					<div class="card-body backgroundSecondaryColor text-white">
+						<h5 class="card-title backgroundSecondaryColor text-white fs-3 text-uppercase">Creative Website</h5>
+						<p class="card-text backgroundSecondaryColor text-white">You will get a multi-page uniquely designed website.</p>
 					</div>
 					<ul class="list-group list-group-flush bg-secondary text-white">
 						<li class="list-group-item bg-secondary text-white">Multiple Webpages</li>
@@ -119,9 +120,9 @@
 			</div>
 			<div class="col-md-4 my-3">
 				<div class="card border border-light border-3 bg-dark text-white">
-					<div class="card-body bg-info text-white">
-						<h5 class="card-title bg-info text-white fs-3 text-uppercase">E-Commerce Website</h5>
-						<p class="card-text bg-info text-white">You will get a multi-page online shop. </p>
+					<div class="card-body backgroundSecondaryColor text-white">
+						<h5 class="card-title backgroundSecondaryColor text-white fs-3 text-uppercase">E-Commerce Website</h5>
+						<p class="card-text backgroundSecondaryColor text-white">You will get a multi-page online shop. </p>
 					</div>
 					<ul class="list-group list-group-flush bg-secondary text-white">
 						<li class="list-group-item bg-secondary text-white">Multiple Webpages</li>
@@ -139,18 +140,18 @@
 	<section class="container d-flex justify-content-center bg-dark text-white px-2 pb-2" id="reviews">
 		<div class="row">
 			<div class="col-md-3">
-				<h2 class="text-center fs-1 fw-bold">Testimonials</h2>
+				<h2 class="text-center fs-1 uppercutFont">Testimonials</h2>
 			</div>
 		</div>
 	</section>
-	<section class="container bg-dark px-2">
+	<section class="container bg-dark px-2 captainComicFont">
 		<div class="row px-5 pb-5 justify-content-between">
 			<div class="col-md-5 p-5 my-3 backgroundSecondaryColor border border-light border-3 rounded-pill">
 				<p class="mb-0 backgroundSecondaryColor text-white text-center fs-3 rounded-circle">"Wow you made that?!?!"</p>
 				<footer class="blockquote-footer text-white text-start fs-4 pt-3">Beanz</footer>
 			</div>
-			<div class="col-md-5 p-5 my-3 bg-info border border-light border-3 rounded-pill">
-				<p class="mb-0 bg-info text-white text-center fs-3 rounded-circle">"Im Goku, a Saiyan who was raised on
+			<div class="col-md-5 p-5 my-3 backgroundSecondaryColor border border-light border-3 rounded-pill">
+				<p class="mb-0 backgroundSecondaryColor text-white text-center fs-3 rounded-circle">"Im Goku, a Saiyan who was raised on
 					Earth...or so they tell me."</p>
 				<footer class="blockquote-footer text-white text-start fs-4 pt-3">Goku</footer>
 			</div>
