made changes to functions

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -204,8 +204,9 @@
 			</div>
 		</div>
 		<div class="g-recaptcha" data-sitekey="6LeZqtgaAAAAAONroZKRa6n8DIa4QbLVM-sW6XZ4"></div>
-		<button class="btn backgroundSecondaryColor" type="submit" id="nimbus">Submit</button>
+		<button class="btn backgroundSecondaryColor" type="submit">Submit</button>
 		<button class="btn backgroundSecondaryColor" type="reset">Reset</button>
+
 	</form>
 </section>
 
