--- a/public_html/index.html
+++ b/public_html/index.html
@@ -150,19 +150,26 @@
 			</div>
 		</div>
 	</section>
-	<section class="container bg-dark px-2 captainComicFont">
-		<div class="row px-5 pb-5 justify-content-between">
-			<div class="col-md-5 p-5 my-3 backgroundSecondaryColor border border-light border-3 rounded-pill">
-				<p class="mb-0 backgroundSecondaryColor text-white text-center fs-3 rounded-circle">"Wow you made that?!?!"</p>
-				<footer class="blockquote-footer text-white text-start fs-4 pt-3">Beanz</footer>
-			</div>
-			<div class="col-md-5 p-5 my-3 backgroundSecondaryColor border border-light border-3 rounded-pill">
-				<p class="mb-0 backgroundSecondaryColor text-white text-center fs-3 rounded-circle">"Im Goku, a Saiyan who was raised on
-					Earth...or so they tell me."</p>
-				<footer class="blockquote-footer text-white text-start fs-4 pt-3">Goku</footer>
-			</div>
+<!--	Alien testimonial-->
+	<section class="container">
+		<div class="row backgroundIMG px-2">
+	<img src="imgs/alien-bubble-text-2.png" alt="speech-bubble" class="alienBubble mx-auto">
 		</div>
 	</section>
+<!--	<section class="container px-2 captainComicFont">-->
+<!--		<div class="row px-5 pb-5 justify-content-between">-->
+<!--			<div class="col-md-5 p-5 my-3 alienBubble">-->
+<!--				<p class="mb-0 text-white text-center fs-3 rounded-circle">"Wow you made that?!?!"</p>-->
+<!--				<footer class="blockquote-footer text-white text-start fs-4 pt-3">Beanz</footer>-->
+
+<!--			</div>-->
+<!--			<div class="col-md-5 p-5 my-3 backgroundSecondaryColor border border-light border-3 rounded-pill">-->
+<!--				<p class="mb-0 backgroundSecondaryColor text-white text-center fs-3 rounded-circle">"Im Goku, a Saiyan who was raised on-->
+<!--					Earth...or so they tell me."</p>-->
+<!--				<footer class="blockquote-footer text-white text-start fs-4 pt-3">Goku</footer>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--	</section>-->
 </main>
 
 <section class="container d-flex justify-content-center bg-dark text-white px-2 pb-2" id="contactMe">
