cleaned up extra comments

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -85,7 +85,7 @@
 	<section class="container d-flex justify-content-center bg-dark text-white pb-2 px-2" id="services">
 		<div class="row">
 			<div class="col-md-4">
-				<h2 class="text-center fs-1 text-nowrap uppercutFont">Services Available</h2>
+				<h2 class="text-center fs-1 text-nowrap uppercutFont">Services</h2>
 			</div>
 		</div>
 	</section>
