--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,6 +12,17 @@
 	<link href="style.css" rel="stylesheet">
 
 	<title>Home Page</title>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-J975HXDTTF"></script>
+	<script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-J975HXDTTF');
+	</script>
+
 </head>
 <body>
 <!--navbar-->
